# fftpp

./: CMakeLists.txt  README.en.md  README.md
.github/workflows/: coverage.yml  linux.yml  macos.yml  windows.yml
benchmark/: CMakeLists.txt
benchmark/fftpp/: CMakeLists.txt  bit_reverse.cpp  fft.cpp  fft.py.in  integral_roots.cpp  inverse_elements.cpp
cmake/: doctest.cmake
include/fftpp/: complex.hpp  fft.hpp  field.hpp  header.hpp  inverse_fft.hpp  inverse_power_of_2.hpp  primitive_root_of_unity.hpp  ring.hpp  unity.hpp
include/fftpp/complex/: inverse_power_of_2.hpp  primitive_root_of_unity.hpp  unity.hpp
include/fftpp/concept/: subscriptable.hpp
include/fftpp/detail/: butterfly.hpp  fft_base.hpp  fft_dispose.hpp  fft_impl.hpp  fill_w_nk.hpp  inverse_w_nk.hpp  reverse_lower_bits.hpp  table_fill_w_nk.hpp
include/fftpp/ring/: basic_ring.hpp  inverse_power_of_2.hpp  limits.hpp  primitive_root_of_unity.hpp  ring.hpp  unity.hpp
include/fftpp/ring/detail/: power_of_2_inverse_elements_table.hpp  primitive_roots_table.hpp
include/fftpp/utility/: binpow.hpp  bit_reversal_permutation.hpp  cos.hpp  intlog2.hpp  is_power_of_2.hpp  overloaded.hpp  permute.hpp  pi.hpp  reverse_lower_bits.hpp  sin.hpp  table_bit_reversal_permutation.hpp
online/: CMakeLists.txt  fftpp_example.cpp  wandbox.py
src/fftpp/: source.cpp
test/: CMakeLists.txt
test/fftpp/: fft.cpp  fft_complex.cpp  fft_ring.cpp  ring.cpp  test.cpp
test/fftpp/concept/: subscriptable.cpp
test/fftpp/utility/: binpow.cpp  bit_reversal_permutation.cpp  cos.cpp  permute.cpp  reverse_lower_bits.cpp  sin.cpp
